# matrix-toolkit

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: __init__.py  errors.py  matrix.py  utils.py
tests/: test_api.py  test_constructors.py
